



########### install files ###############

install( FILES top-right-kmail.png  	main.html  	kmail.css  DESTINATION ${DATA_INSTALL_DIR}/kmail/about)




#original Makefile.am contents follow:

#about_DATA = \
#	top-right-kmail.png \
#	main.html \
#	kmail.css
#
#aboutdir = $(kde_datadir)/kmail/about
