about_DATA = \
	bar-bottom-left.png    bar-top-right.png      box-middle-left.png \
	bar-bottom-middle.png  bottom-left.png        box-middle-right.png  top-middle.png \
	bar-bottom-right.png   bottom-middle.png      box-top-left.png      top-right-kmail.png \
	bar-middle-left.png    bottom-right.png       box-top-middle.png \
	bar-middle-right.png   box-bottom-left.png    box-top-right.png \
	bar-top-left.png       box-bottom-middle.png  \
	bar-top-middle.png     box-bottom-right.png   top-left.png          main.html

aboutdir = $(kde_datadir)/kmail/about
