



########### install files ###############

install( FILES observer.h observable.h htmlwriter.h bodypart.h bodypartformatter.h bodyparturlhandler.h DESTINATION ${INCLUDE_INSTALL_DIR}/kmail/interfaces)




#original Makefile.am contents follow:

#kmailincludedir = $(includedir)/kmail/interfaces
#kmailinclude_HEADERS = \
#	observer.h \
#	observable.h \
#	htmlwriter.h \
#	bodypart.h \
#	bodypartformatter.h \
#	bodyparturlhandler.h
