
add_subdirectory( icons ) 




########### install files ###############

install( FILES mail-deleted.png mail-new.png mail-mark-new.png mail-unread.png mail-mark-unread.png mail-read.png mail-mark-read.png mail-replied.png mail-forwarded.png mail-forwarded-replied.png mail-queued.png mail-important.png mail-mark-important.png mail-sent.png mail-thread-watch.png mail-thread-ignore.png mail-task.png mail-mark-task.png pgp-keys.png kmmsgpartiallyencrypted.png mail-signed-partially.png kmmsgfullyencrypted.png mail-signed-verified.png kmmsgundefinedencrypted.png mail-signed.png mail-mark-junk.png kmwizard.png quotecollapse.png quoteexpand.png  DESTINATION ${DATA_INSTALL_DIR}/kmail/pics)

