set(pics
attachmentQuicklistClosed.png  enterprise_sp_right.png   mail-download-now.png
attachmentQuicklistOpened.png  enterprise_s_right.png    mail-encrypted-full.png
enterprise_bottom_left.png     enterprise_sw.png         mail-encrypted-part.png
enterprise_bottom.png          enterprise_top_left.png   mail-encrypted.png
enterprise_bottom_right.png    enterprise_top.png        mail-thread-ignored.png
enterprise_icon.png            enterprise_top_right.png  mail-thread-watch.png
enterprise_left.png            enterprise_w.png          pgp-keys.png
enterprise_right.png           kmwizard.png              quotecollapse.png
enterprise_sbar.png            mail-deleted.png          quoteexpand.png
enterprise_s_left.png          mail-download-later.png   mail-vertical-separator-line.png
mail-horizontal-space.png)

install( FILES ${pics} DESTINATION ${DATA_INSTALL_DIR}/kmail/pics)
