SUBDIRS = icons

pics_DATA = kmmsgdel.png kmmsgnew.png kmmsgunseen.png kmmsgread.png \
	kmmsgreplied.png kmmsgforwarded.png kmmsgqueued.png kmmsgflag.png \
	kmmsgsent.png kmmsgwatched.png kmmsgignored.png \
	pgp-keys.png \
	kmmsgpartiallyencrypted.png \
	kmmsgpartiallysigned.png kmmsgfullyencrypted.png \
	kmmsgfullysigned.png kmmsgundefinedencrypted.png \
	kmmsgundefinedsigned.png \
	kmmsgspam.png kmmsgham.png kmmsgattachment.png \
	kmgroupware_folder_contacts.png \
	kmgroupware_folder_calendar.png kmgroupware_folder_notes.png \
	kmgroupware_folder_tasks.png kmgroupware_folder_journals.png


picsdir = $(kde_datadir)/kmail/pics

EXTRA_DIST = $(pics_DATA)

