SUBDIRS = icons

pics_DATA = kmmsgnew.png kmmsgunseen.png kmmsgread.png \
	kmmsgreplied.png kmmsgforwarded.png kmmsgqueued.png \
	kmmsgsent.png kmmsgwatched.png \
	kmmsgread_fwd.png kmmsgread_replied.png kmmsgread_fwd_replied.png \
	pgp-keys.png \
	kmmsgpartiallyencrypted.png \
	kmmsgpartiallysigned.png kmmsgfullyencrypted.png \
	kmmsgfullysigned.png kmmsgundefinedencrypted.png \
	kmmsgundefinedsigned.png \
	quotecollapse.png quoteexpand.png


picsdir = $(kde_datadir)/kmail/pics

EXTRA_DIST = $(pics_DATA)

